*SVN*

* Slight doc tweak to the ActionView::Helpers::PrototypeHelper#replace docs.  Closes #6922 [Steven Bristol]

* Slight doc tweak to #prepend_filter.  Closes #6493 [Jeremy Voorhis]

* Add more extensive documentation to the AssetTagHelper.  Closes #6452 [Bob Silva]

* Clean up multiple calls to #stringify_keys in TagHelper, add better documentation and testing for TagHelper.  Closes #6394 [Bob Silva]

* [DOCS] fix reference to ActionController::Macros::AutoComplete for #text_field_with_auto_complete. Closes #2578 [Jan Prill]

* Make sure html_document is reset between integration test requests. [ctm]

* Set session to an empty hash if :new_session => false and no session cookie or param is present. CGI::Session was raising an unrescued ArgumentError.  [Josh Susser]

* Routing uses URI escaping for path components and CGI escaping for query parameters.  [darix, Jeremy Kemper]

* Fix assert_redirected_to bug where redirecting from a nested to to a top-level controller incorrectly added the current controller's nesting.  Closes #6128.  [Rick Olson]

* Singleton resources: POST /singleton => create, GET /singleton/new => new.  [Jeremy Kemper]

* Use 400 Bad Request status for unrescued ActiveRecord::RecordInvalid exceptions.  [Jeremy Kemper]

* Silence log_error deprecation warnings from inspecting deprecated instance variables.  [Nate Wiger]

* Only cache GET requests with a 200 OK response.  #6514, #6743 [RSL, anamba]

* Add a 'referer' attribute to TestRequest. [Jamis Buck]

* Ensure render :json => ... skips the layout.  Closes #6808 [Josh Peek]

* Fix HTML::Node to output double quotes instead of single quotes.  Closes #6845 [mitreandy]

* Correctly report which filter halted the chain.  #6699 [Martin Emde]

* Fix a bug in Routing where a parameter taken from the path of the current request could not be used as a query parameter for the next. Closes #6752. [Nicholas Seckar]
