@@ -1,5 +1,7 @@
 *SVN*
 
+* Fix no method error with error_messages_on.  Closes #6935 [nik.wakelin Koz]
+
 * Slight doc tweak to the ActionView::Helpers::PrototypeHelper#replace docs.  Closes #6922 [Steven Bristol]
 
 * Slight doc tweak to #prepend_filter.  Closes #6493 [Jeremy Voorhis]
